style: properly align header + fix carousel width (#172)

--- a/src/pages/style.module.css
+++ b/src/pages/style.module.css
@@ -32,14 +32,4 @@
   width: 100%;
   display: flex;
   justify-content: center;
-
-  @media (min-width: 1440px) {
-    width: 70%;
-  }
-
-  @media (min-width: 2000px) {
-    width: 60%;
-  }
 }
-
-
