--- a/src/presentation/components/header/style.module.css
+++ b/src/presentation/components/header/style.module.css
@@ -1,7 +1,12 @@
 /* Header CSS */
 
 .header {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 10%,  rgba(0, 0, 0, 0.6) 65%, transparent 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 10%,
+    rgba(0, 0, 0, 0.6) 65%,
+    transparent 100%
+  );
   border: none;
 }
 
@@ -17,9 +22,26 @@
   height: 100%;
 }
 
+.headerWrapperImg {
+  width: calc(100% / 3);
+}
+
+.headerWrapperNav {
+  display: flex;
+  justify-content: center;
+  width: calc(100% / 3);
+  gap: 2.5rem;
+}
+
+.headerWrapperButton {
+  width: calc(100% / 3);
+  display: flex;
+  justify-content: flex-end;
+}
+
 .headerNavLink {
-    cursor: pointer;
-    transition: all 0.8s ease;
+  cursor: pointer;
+  transition: all 0.8s ease;
 }
 
 .headerNavLink:hover {
