--- a/src/presentation/components/suggestions/style.module.css
+++ b/src/presentation/components/suggestions/style.module.css
@@ -7,6 +7,11 @@
   margin: 0;
   justify-content: center;
   align-items: center;
+  width: 80%;
+
+  @media (min-width: 2000px) {
+    width: 60%;
+  }
 }
 
 .suggestionsTop {
